--- a/ng-velocity-nav/projects/ng-velocity/package.json
+++ b/ng-velocity-nav/projects/ng-velocity/package.json
@@ -2,7 +2,8 @@
   "name": "ng-velocity",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^7.1.0",
-    "@angular/core": "^7.1.0"
+    "@angular/common": "^8.1.0",
+    "@angular/core": "^8.1.0",
+    "@angular/router": "^8.1.0"
   }
 }
