--- a/ng-velocity-nav/angular.json
+++ b/ng-velocity-nav/angular.json
@@ -3,33 +3,33 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-velocity": {
-      "root": "projects/ng-velocity",
-      "sourceRoot": "projects/ng-velocity/src",
+    "aop-routing": {
+      "root": "projects/aop-routing", 
+      "sourceRoot": "projects/aop-routing/src",
       "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/ng-velocity/tsconfig.lib.json",
-            "project": "projects/ng-velocity/ng-package.json"
+            "tsConfig": "projects/aop-routing/tsconfig.lib.json",
+            "project": "projects/aop-routing/ng-package.json"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/ng-velocity/src/test.ts",
-            "tsConfig": "projects/ng-velocity/tsconfig.spec.json",
-            "karmaConfig": "projects/ng-velocity/karma.conf.js"
+            "main": "projectsaop-routing/src/test.ts",
+            "tsConfig": "projects/aop-routing/tsconfig.spec.json",
+            "karmaConfig": "projects/aop-routing/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/ng-velocity/tsconfig.lib.json",
-              "projects/ng-velocity/tsconfig.spec.json"
+              "projects/aop-routing/tsconfig.lib.json",
+              "projects/aop-routing/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -39,5 +39,5 @@
       }
     }
   },
-  "defaultProject": "ng-velocity"
+  "defaultProject": "aop-routing"
 }
