Feat/route config (#21)
* minor refactor

* added lodash

* added routeTransform interface

* moved functions to new file

* Route helper class to handle all route config logic

* adding forRoot to module

* adding logic to check for config object

* minor refactor

* library name change

* root folder name change

* renamed file

* refactor

* added new method isAopNavObj method

* modified logic to include route table modification

* refactored to accept routeTransform object

* added new public objects

* Refactor: Fixed grammar mistakes for error messages

* Refactored and optimized logic

* fixing typo

* updated logic to check for component presence

--- a/aop-navigation/angular.json
+++ b/aop-navigation/angular.json
@@ -19,10 +19,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/aop-routing/src/test.ts",
+            "main": "projectsaop-routing/src/test.ts",
             "tsConfig": "projects/aop-routing/tsconfig.spec.json",
-            "karmaConfig": "projects/aop-routing/karma.conf.js",
-            "codeCoverage": true
+            "karmaConfig": "projects/aop-routing/karma.conf.js"
           }
         },
         "lint": {
