Feat/route config (#21)
* minor refactor

* added lodash

* added routeTransform interface

* moved functions to new file

* Route helper class to handle all route config logic

* adding forRoot to module

* adding logic to check for config object

* minor refactor

* library name change

* root folder name change

* renamed file

* refactor

* added new method isAopNavObj method

* modified logic to include route table modification

* refactored to accept routeTransform object

* added new public objects

* Refactor: Fixed grammar mistakes for error messages

* Refactored and optimized logic

* fixing typo

* updated logic to check for component presence

--- a/aop-navigation/package.json
+++ b/aop-navigation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-velocity-nav",
+  "name": "aop-navigation",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.20",
     "node-sass": "^4.13.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
