--- a/aop-navigation/projects/aop-routing/package.json
+++ b/aop-navigation/projects/aop-routing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-velocity",
+  "name": "aop-routing",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^8.1.0",
