--- a/aop-navigation/angular.json
+++ b/aop-navigation/angular.json
@@ -19,9 +19,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projectsaop-routing/src/test.ts",
+            "main": "projects/aop-routing/src/test.ts",
             "tsConfig": "projects/aop-routing/tsconfig.spec.json",
-            "karmaConfig": "projects/aop-routing/karma.conf.js"
+            "karmaConfig": "projects/aop-routing/karma.conf.js",
+            "codeCoverage": true
           }
         },
         "lint": {
