--- a/aop-navigation/projects/aop-routing/tsconfig.lib.json
+++ b/aop-navigation/projects/aop-routing/tsconfig.lib.json
@@ -6,7 +6,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "inlineSources": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
