--- a/aop-navigation/package.json
+++ b/aop-navigation/package.json
@@ -1,9 +1,33 @@
 {
   "name": "aop-navigation",
   "version": "1.0.0",
+  "description": "Provides the capability to perform Imperative and Popstate navigation operationsin Angular through the ease of typescript decorators, without the need to import the Angular Router object",
+  "author": "Eric Sarpong",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dankwansere/aop-navigation.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Dankwansere/aop-navigation/issues"
+  },
+  "keywords": [
+    "angular",
+    "javascript",
+    "typescript",
+    "routing",
+    "navigation",
+    "popstate",
+    "browser"
+  ],
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prepare": "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags",
     "build": "ng build",
     "test": "ng test --code-coverage --watch=false",
     "format": "prettier --write \"projects/aop-routing/src/**/*.ts\"",
