--- a/aop-navigation/package.json
+++ b/aop-navigation/package.json
@@ -1,14 +1,37 @@
 {
   "name": "aop-navigation",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Provides the capability to perform Imperative and Popstate navigation operationsin Angular through the ease of typescript decorators, without the need to import the Angular Router object",
+  "author": "Eric Sarpong",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dankwansere/aop-navigation.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Dankwansere/aop-navigation/issues"
+  },
+  "keywords": [
+    "angular",
+    "javascript",
+    "typescript",
+    "routing",
+    "navigation",
+    "popstate",
+    "browser"
+  ],
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prepare": "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags",
     "build": "ng build",
     "test": "ng test --code-coverage --watch=false",
-    "jTest": "jest --coverage",
-    "jTest-watch": "jest --watch",
-    "lint": "ng lint",
+    "format": "prettier --write \"projects/aop-routing/src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
     "e2e": "ng e2e",
     "compodoc": "npx compodoc -p tsconfig.json projects"
   },
@@ -37,7 +60,7 @@
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "core-js": "^2.5.4",
-    "lodash": "^4.17.20",
+    "lodash.clonedeep": "^4.5.0",
     "node-sass": "^4.13.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -53,13 +76,13 @@
     "@microsoft/tsdoc": "^0.12.21",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
     "@types/jest": "^25.2.1",
-    "jest": "^25.3.0",
-    "jest-preset-angular": "^8.1.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^25.3.0",
+    "jest-preset-angular": "^8.1.3",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
@@ -68,11 +91,13 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-spec-reporter": "0.0.32",
     "ng-packagr": "^4.2.0",
+    "prettier": "^2.2.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tsickle": "0.35.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.1.6"
   }
 }
