--- a/aop-routing/package.json
+++ b/aop-routing/package.json
@@ -35,6 +35,13 @@
     "e2e": "ng e2e",
     "compodoc": "npx compodoc -p tsconfig.json projects"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint",
+      "pre-push": "test",
+      "...": "..."
+    }
+  },
   "jest": {
     "preset": "jest-preset-angular",
     "setupFilesAfterEnv": [
@@ -79,6 +86,7 @@
     "@types/jest": "^25.2.1",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "husky": "^6.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^25.3.0",
