--- a/aop-routing/package.json
+++ b/aop-routing/package.json
@@ -38,8 +38,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint",
-      "pre-push": "npm run test",
-      "...": "..."
+      "pre-push": "npm run test"
     }
   },
   "jest": {
