--- a/aop-routing/package.json
+++ b/aop-routing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aop-routing",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Provides the capability to perform Imperative and Popstate navigation operationsin Angular through the ease of typescript decorators, without the need to import the Angular Router object",
   "author": "Eric Sarpong",
   "repository": {
@@ -51,27 +51,27 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/animations": "~9.1.13",
+    "@angular/common": "~9.1.13",
+    "@angular/compiler": "~9.1.13",
+    "@angular/core": "~9.1.13",
+    "@angular/forms": "~9.1.13",
+    "@angular/platform-browser": "~9.1.13",
+    "@angular/platform-browser-dynamic": "~9.1.13",
+    "@angular/router": "~9.1.13",
     "core-js": "^2.5.4",
     "lodash.clonedeep": "^4.5.0",
     "node-sass": "^4.13.0",
     "rxjs": "~6.6.7",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.2",
-    "@angular-devkit/build-ng-packagr": "~0.11.0",
-    "@angular/cli": "~8.3.29",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-ng-packagr": "^0.901.15",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@compodoc/compodoc": "^1.1.11",
     "@microsoft/tsdoc": "^0.12.21",
     "@types/jasmine": "~2.8.9",
@@ -90,11 +90,11 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-mocha-reporter": "^2.2.5",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^4.2.0",
+    "ng-packagr": "^9.1.5",
     "prettier": "^2.2.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": "0.35.0",
+    "tsickle": "0.38.1",
     "tslib": "^1.9.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.18.0",
