--- a/aop-routing/package.json
+++ b/aop-routing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aop-routing",
-  "version": "9.0.0",
+  "version": "10.0.0",
   "description": "Provides the capability to perform Imperative and Popstate navigation operationsin Angular through the ease of typescript decorators, without the need to import the Angular Router object",
   "author": "Eric Sarpong",
   "repository": {
@@ -51,27 +51,26 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "~9.1.13",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/forms": "~9.1.13",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
+    "@angular/animations": "~10.2.5",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
+    "@angular/core": "~10.2.5",
+    "@angular/forms": "~10.2.5",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "core-js": "^2.5.4",
     "lodash.clonedeep": "^4.5.0",
-    "node-sass": "^4.13.0",
     "rxjs": "~6.6.7",
     "tslib": "^1.9.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.2",
-    "@angular-devkit/build-ng-packagr": "^0.901.15",
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler-cli": "~9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "0.1002.4",
+    "@angular-devkit/build-ng-packagr": "0.1002.4",
+    "@angular/cli": "~10.2.4",
+    "@angular/compiler-cli": "~10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@compodoc/compodoc": "^1.1.11",
     "@microsoft/tsdoc": "^0.12.21",
     "@types/jasmine": "~2.8.9",
@@ -90,7 +89,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-mocha-reporter": "^2.2.5",
     "karma-spec-reporter": "0.0.32",
-    "ng-packagr": "^9.1.5",
+    "ng-packagr": "10.0.0",
     "prettier": "^2.2.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
@@ -98,6 +97,6 @@
     "tslib": "^1.9.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.8"
   }
 }
